using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using UnityEngine.InputSystem;

public class TestDummy : TestBase
{
    protected override void Test1(InputAction.CallbackContext context)
    {

    }
    protected override void Test2(InputAction.CallbackContext context)
    {
    }
    protected override void Test3(InputAction.CallbackContext context)
    {
    }
    protected override void Test4(InputAction.CallbackContext context)
    {
    }
    protected override void Test5(InputAction.CallbackContext context)
    {
    }
    protected override void Test6(InputAction.CallbackContext context)
    {
    }
}
